--- a/zenmind_frontend/src/components/ZenGames/FlappyBird.css
+++ b/zenmind_frontend/src/components/ZenGames/FlappyBird.css
@@ -13,7 +13,7 @@
 .flappy-title {
   font-size: 2rem;
   font-weight: 700;
-  color: green;
+  color: var(--gold-color);
   margin-bottom: 1.2rem;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
