--- a/zenmind_frontend/src/components/ZenGames/SnakeGame.css
+++ b/zenmind_frontend/src/components/ZenGames/SnakeGame.css
@@ -15,7 +15,7 @@
 .snake-heading {
   font-size: 2rem;
   font-weight: 700;
-  color: green;
+  color: var(--gold-color);
   margin-bottom: 1.5rem;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
